# follower-bar

./: .gitignore  AGENTS.md  LICENSE  README-CN.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: USER_GUIDE.md  USER_GUIDE_CN.md  refresh-performance-plan.md  release-homebrew.md  runtime-distribution-plan.md  user-guide.md
docs/superpowers/plans/: 2026-03-19-followbar.md
docs/superpowers/specs/: 2026-03-19-followbar-design.md  2026-03-21-browser-bridge-design.md  2026-03-21-wechat-browser-design.md
scripts/: update-homebrew-cask.mjs
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns  icon.rgba
src-tauri/src/: account_config.rs  advanced_runtime.rs  commands.rs  db.rs  keychain.rs  lib.rs  main.rs  milestone.rs  scheduler.rs
src-tauri/src/providers/: bilibili.rs  douyin.rs  instagram.rs  mod.rs  threads.rs  wechat.rs  x.rs  xiaohongshu.rs  youtube.rs  zhihu.rs
src-tauri/tests/: bilibili_test.rs  x_test.rs  youtube_test.rs
src/components/: AccountDetail.tsx  AccountList.tsx  AccountRow.tsx  AddAccount.tsx  AppIconMark.tsx  MiniChart.tsx  Settings.tsx
src/hooks/: useAccounts.ts
src/lib/: accountDisplay.ts  commands.ts  i18n.tsx  providerMeta.ts
