[package]
name = "followbar"
version = "0.1.18"
description = "Mac menubar follower tracker built with Tauri"
authors = ["innomad"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "followbar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "followbar"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSResponder"] }
